--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
 </head>
 
 <body>
+    <!--stay focused part-->
+    <section class="flexible-container">
+        <div class="picture">
+            <h1> stay focused </h1>
+            <h2> Mission 2022 </h2>
+            <p>Success is not final, failure is not fatal: it is the courage to continue that counts.</p>
+            <a class="link-button" target="_blank" href="https://www.instagram.com/">contact me</a>
+        </div>
+
+        <div class="picture">
+            <img src="images/person/person-0.png" alt="">
+        </div>
+
+    </section>
+    <!--My mission 2022 part-->
+
 
 </body>
 
