--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <!--stay focused part-->
     <section class="flexible-container">
         <div class="picture">
-            <h1> stay focused </h1>
-            <h2> Mission 2022 </h2>
+            <h1 id="long"> Stay focused </h1>
+            <h2 id="long"> Mission 2022 </h2>
             <p>Success is not final, failure is not fatal: it is the courage to continue that counts.</p>
             <a class="link-button" target="_blank" href="https://www.instagram.com/">contact me</a>
         </div>
@@ -28,6 +28,79 @@
 
     </section>
     <!--My mission 2022 part-->
+
+    <section class="Mission-area">
+        <!--Mission-->
+        <h1 id="mission">Mission <span id="orange">2022</span></h1>
+        <div class="flexible-container">
+            <div id="Mission-experience" class="Mission-item">
+                <h1>Mission</h1>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+
+            <!--vission-->
+
+            <div id="vision-experience" class="Mission-item">
+                <h1>Vision</h1>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero</p>
+            </div>
+
+            <!--goal-->
+            <div id="goal-experience" class="Mission-item">
+                <h1>goal</h1>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+
+            </div>
+
+        </div>
+
+
+    </section>
+
+    <!--develop without limit-->
+
+    <section class="Dev-container">
+        <div class="full-width">
+            <img src="images/pictures/coding.png" alt="">
+        </div>
+        <div class="full-width">
+            <h1>Develop without limit</h1>
+            <p>You never change things by fighting the existing reality. To change something, build a new model that
+                makes the existing model obsolete.” “If you truly want to be respected by people you love, you must
+                prove to them that you can survive without them.</p>
+            <a class="link-button" target="_blank" href="https://www.instagram.com/">read the documentation</a>
+        </div>
+
+    </section>
+
+    <!--know our-->
+    <section class="know-container">
+
+        <div class="overall-width">
+            <h1>know our global community</h1>
+            <p>Community development is a process where community members are supported by agencies to identify and take
+                collective action on issues which are important to them.</p>
+            <a class="link-button" target="_blank" href="https://www.instagram.com/">read the documentation</a>
+        </div>
+        <div class="overall-width">
+            <img src="images/pictures/project.png" alt="">
+        </div>
+
+
+    </section>
+
+    <footer class="Hard-work">
+        <h1>Mission <span id="color">2022</span></h1>
+        <p class="work">Hard work, Perseverance, and Determination for 2022</p>
+    </footer>
 
 
 </body>
